--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,12 @@
-.nav-link{
-    font-size: 16px;
-}
 .header-container{
-    display: flex;
-    justify-content: space-between;
-    position:fixed;
-    width: 100%;
-    height: 1.5em;
+    font-size: clamp(0.5rem, 5vw, 1.5rem);
+    height: 5rem;
     background-color: white;
+    box-shadow: 0px -4px 7px 2px #a39a9a;
     align-items: center;
-    border-bottom: 1px solid black;
-    margin-right: 1em;
+    justify-content: space-between;
+    padding: 0 clamp(0.5rem, 5vw, 1rem);
 }
-.header-nav{
-    padding: 0 1em;
+.header-container img{
+    height: clamp(1rem, 10vw, 4rem);
 }
